# l1_solver

./: Cargo.toml  README.md
data/: G_small.txt  x0.txt  x0_small.txt  y.txt  y_small.txt
examples/: l1_decode.rs
src/: io.rs  lib.rs
